[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/native_dialogs/bin/native_dialog_open_file.gdns" type="Script" id=1]
[ext_resource path="res://src/Buttons/LoadFromDisk.gd" type="Script" id=2]

[node name="LoadFromDisk" type="Button"]
unique_name_in_owner = true
margin_right = 148.0
margin_bottom = 41.251
size_flags_horizontal = 3
text = "Load From Disk"
script = ExtResource( 2 )

[node name="LoadFromDiskNativeDialogOpenFile" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )
title = "Load generation json from disk"
initial_path = "user://"
filters = PoolStringArray( "*.png ; Image Files", "*.json ; json files", "*.png, *.json ; all files" )

[connection signal="pressed" from="." to="." method="_on_LoadFromDisk_pressed"]
[connection signal="files_selected" from="LoadFromDiskNativeDialogOpenFile" to="." method="_on_LoadFromDiskNativeDialogOpenFile_files_selected"]
